--- a/package.json
+++ b/package.json
@@ -1,14 +1,28 @@
 {
-  "name": "hotel",
+  "name": "resturant-order-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@emotion/react": "^11.11.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "express": "^4.18.2",
+    "firebase": "^10.7.2",
+    "jsbarcode": "^3.11.6",
+    "lodash": "^4.17.21",
+    "pg": "^8.11.3",
     "react": "^18.2.0",
+    "react-barcode": "^1.4.6",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
+    "sass": "^1.70.0",
+    "sweetalert2": "^11.10.4",
+    "uid": "^2.0.2",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
